<resources>
    <string name="app_name">MessApp</string>
    <string name="name">Nome</string>
    <string name="email">E-mail</string>
    <string name="pwd">Senha</string>
    <string name="name_hint">Insira seu nome completo</string>
    <string name="email_hint">Digite seu e-mail de login</string>
    <string name="pwd_hint">Insira uma senha</string>
    <string name="login">Entrar</string>
    <string name="forgot_pwd">Esqueceu a senha?</string>
    <string name="register">Criar conta</string>
    <string name="fb_login">Entrar com o Facebook</string>
    <string name="title_activity_register">Criar conta</string>
    <string name="save_register">Salvar</string>
    <string name="title_activity_main">MessApp</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="contacts_tab">Contatos</string>
    <string name="chats_tab">Conversas</string>
</resources>
