<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.iesb.messapp.LoginActivity"
    android:background="@color/colorLoginBackground">


    <ImageView
        android:id="@+id/logo_login"
        android:layout_width="@dimen/logo_login"
        android:layout_height="@dimen/logo_login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/text_app_name_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo_login"
        android:layout_centerHorizontal="true"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/app_name"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/app_name_login"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/login_area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_app_name_login"
        android:layout_marginLeft="@dimen/login_horizontal_margin"
        android:layout_marginRight="@dimen/login_horizontal_margin"
        android:layout_marginTop="@dimen/login_top_margin"
        android:background="@color/colorAccentDark"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/login_horizontal_margin"
            android:layout_marginRight="@dimen/login_horizontal_margin"
            android:layout_marginTop="@dimen/login_top_margin"
            android:background="@color/colorBackground"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/login_icons_margin"
                android:src="@drawable/ic_mail_24dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/text_background"
                android:textColor="@color/colorPrimaryText"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:gravity="center_vertical"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/login_horizontal_margin"
            android:layout_marginRight="@dimen/login_horizontal_margin"
            android:layout_marginTop="@dimen/login_icons_margin"
            android:background="@color/colorBackground"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/login_icons_margin"
                android:src="@drawable/ic_lock_24dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/text_background"
                android:textColor="@color/colorPrimaryText"
                android:hint="@string/pwd"
                android:inputType="textPassword"
                android:gravity="center_vertical"
                />

        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/login_horizontal_margin"
            android:layout_marginRight="@dimen/login_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:background="@color/colorPrimary"
            android:textColor="@color/colorBackground"
            android:text="@string/login"
            android:onClick="onClickLogin" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/login_horizontal_margin"
            android:layout_marginRight="@dimen/login_horizontal_margin"
            android:layout_marginTop="@dimen/login_icons_margin"
            android:layout_marginBottom="@dimen/login_top_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBackground"
                android:text="@string/forgot_pwd"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:textColor="@color/colorBackground"
                android:text="@string/register"
                android:onClick="onClickRegister" />

        </RelativeLayout>
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_area"
        android:layout_alignStart="@id/login_area"
        android:layout_alignEnd="@id/login_area"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="@color/colorFB"
        android:textColor="@color/colorBackground"
        android:text="@string/fb_login"
        />

</RelativeLayout>
